--- a/home.html
+++ b/home.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
   <head>
       <title>Criar Sala - Rocket.Q</title>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-compatible" content="IE=edge">
+
+      <!-- view port -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <!-- CSS -->
+      <link rel="stylesheet" href="styles/global.css">
+      <link rel="stylesheet" href="styles/home.css">
+
+      <!-- FONTS  -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
+    <div id="home" class="content">
       <header>
         <img src="assets/logo.svg" alt="escrito rocket.q Logo"/>
       </header>
@@ -23,7 +39,7 @@
           <div class="separator">
             <div></div>
             <div>ou</div>
-            <div></div>
+            <div></div> 
           </div>
           <section>
             <h2>Cria sua própria sala de forma fácil</h2>
@@ -34,5 +50,8 @@
           </section>
         </div>
      </main>
+
+    </div>
+      
   </body>
 </html>
