continuaçao da pagina

--- a/home.html
+++ b/home.html
@@ -23,6 +23,10 @@
         <img src="assets/logo.svg" alt="escrito rocket.q Logo"/>
       </header>
 
+      <div id="bg">
+
+      </div>
+
       <main>
         <div class="container">
           <section>
@@ -43,7 +47,7 @@
           </div>
           <section>
             <h2>Cria sua própria sala de forma fácil</h2>
-            <a href="create-room.html">
+            <a href="create-room.html" class="button outlined">
               <img src="assets/users.svg" alt="Criar sala">
               Criar Sala
             </a>
